--- a/package.json
+++ b/package.json
@@ -4,15 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "ts-node index.ts",
+    "test": "mocha -r ts-node/register tests/**/*.ts",
+    "testWithCoverage": "nyc -r lcov -e .ts -x \"*.ts\" mocha -r ts-node/register tests/**/*.ts && nyc report"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/chai": "^4.1.7",
+    "@types/mocha": "^5.2.7",
+    "chai": "^4.2.0",
+    "mocha": "^6.1.4",
+    "nyc": "^14.1.1",
+    "ts-node": "^8.2.0",
     "typescript": "^3.5.1"
   },
-  "dependencies": {
-    "ts-node": "^8.2.0"
-  }
+  "dependencies": {}
 }
